[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Autoload/MusicManager.gd" type="Script" id=1]

[node name="MusicManager" type="Node"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="SoundsPlayer" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[node name="AudioStreamPlayer2D6" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[node name="AudioStreamPlayer2D7" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[node name="AudioStreamPlayer2D8" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[node name="AudioStreamPlayer2D9" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[node name="AudioStreamPlayer2D10" type="AudioStreamPlayer" parent="SoundsPlayer"]
bus = "Sound"

[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
